frontend/src/Apps/FinanceApp.scss
@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap');

.budget-viewer{
    height: 100vh;
    display: flex;
    flex-direction: column;
    font-family: 'Roboto Condensed', sans-serif;
    user-select: none;
}

.budget-viewer header h1{
    margin: 0;
    background-color: #444;
    color: #FFF;
    text-align: center;
    height: 3rem;
    overflow: hidden;
}

.grid-container {
    gap: 1ex;
    padding: 1ex;
    height: calc(100vh - 3rem); /* Subtract the header height */
    width: 100vw;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
    align-content: stretch;
}

.grid-container > .budget-block {
    height: calc(50% - 1ex); /* Half of the viewport height */
    width: calc(33.33vw - 1rem); /* One third of the viewport width */
    background-color: #EEEEEE;
    border-radius: 1rem;
    border: 1px solid #CCC;
    overflow: hidden;
}

/* width under 1500px */
@media screen and (max-width: 1200px) {
    .grid-container > .budget-block {
        width: calc(50% - 0.5rem); /* Half of the viewport width */
        height: calc(33vh - 2rem); /* One third of the viewport height */
    }
}
/* width under 1500px */
@media screen and (max-width: 1000px) {
    .grid-container > .budget-block {
        width: calc(100% - 0.5rem); /* Half of the viewport width */
        height: calc(50vh - 2rem); /* One third of the viewport height */
    }
}

  

.grid-container .budget-block h2{
    color: #FFF;
    background-color: #00000099;
    text-align: center;
    margin: 0;
    border-top-left-radius: 1rem;
    border-top-right-radius: 1rem;
    height: 2rem;
    line-height: 2rem;
    font-size: 1.5rem;
    letter-spacing: 1px;
    overflow: hidden;

}

.grid-container .budget-block .budget-block-content{
    height: calc(100% - 2rem); /* Subtract the header height */
    overflow: hidden;
    border-bottom-left-radius: 1rem;
    border-bottom-right-radius: 1rem;
    width: 100%;
    display: relative;
}


pre{
    line-height: 2ex;
    font-size: 1ex;
    word-break: break-all;
    white-space: pre-wrap;
    padding: 1rem;
    overflow: hidden;
}

.category-label {
    font-family: 'Roboto Condensed', sans-serif;
}

b.category-label {
    color: #000;
    font-size: 1em;
    font-family: 'Roboto', sans-serif;
}

small.category-label {
    color: #AAA!important;
    font-size: 0.7em;
    font-family: 'Roboto', sans-serif;
}


.category-label .green{
    color: #759c82;
}





.month-header{
    display: flex;
    gap: 1ex;
    justify-content: space-around;
    padding: 1ex;
    margin:0;
    width:100%;

}

.month-header div.month{
    white-space: nowrap;
    border: 1px solid #CCC;
    margin: 1ex 0;
    padding: 0 1ex;
    border-radius: 0.8ex;
    cursor: pointer;
}
.month-header div.month:hover{
    outline: 2px solid #000;
}

.month-header div.month.active{
    background-color: #000;
    color: #FFF;
}

.budget-drawer{
    font-family: "Roboto Condensed", sans-serif;
}

.budget-drawer-content .transactions-table{
    width: 100%;
    border-collapse: collapse;
}
.budget-drawer-content .transactions-table td,
.budget-drawer-content .transactions-table th
{
white-space: nowrap;
padding: 0.3ex;
}
.budget-drawer-content .transactions-table td .memo{
    margin-left: 1ex;
    color: #AAA;
    font-size: 0.7rem;
}

td.description-col{
    /* flex grow:1 for td */
    /* flex: 1 wont work for td */
     width: 100%;    
}

td.amount-col{
    text-align: right;
    width: 10ex;
}
tr{
    cursor: pointer;
}


tr.income{
    background-color: #d8f0e4;
}

tr.even:not(.income){
    background-color: #F5F5F5;
}

tr .amount-col{
    color:#000;
    font-weight: 800;
    text-decoration: none;
}
tr.income .amount-col{
    color: rgb(19, 95, 56)
}
.status-badge span{
    border-radius: 5px;
    font-size: 0.8rem;
    padding: 0 1ex;
    margin: 0 1ex;
    cursor: pointer;
}
.status-badge .amount{
    background-color: #888;
    color: white;
}.status-badge .gained{
    background-color: #759c82;
    color: white;
}
.status-badge .spent{
    background-color: #0077b6;
    color: white;
}
.status-badge .remaining{
    background-color: #DDD;
    color: black;
}

.budget-block .budget-block-content >  div:nth-child(2)
{
    height: calc(100% - 2.5rem);
}

.overviewTable
{
    width: calc(100% + 2px);
    border-collapse: collapse;
    height: calc(100% + 2px);
    margin: -1px;
}
.overviewTable td
{
    padding: 0 1ex;
    border: 1px solid #BBB;
    text-align: right;
    white-space: nowrap;
    overflow: hidden;
}
.overviewTable tr:not(.sum) td:not(.surplus):hover
{
    filter: brightness(1.5);
    background-color: #112d3c;
    color: #FFF;
}
.overviewTable tr:not(.sum) td.surplus:hover{
    background-color: #333!important;
    cursor: pointer;
    color: #FFF!important;
}


.overviewTable tr.sum td{
    border-top: 4px solid #AAA;
    background-color: #333;
    color: #EEE;
    font-weight: 800;
}
.overviewTable  td.surplus{
    border-left: 4px solid #666!important;
}
.overviewTable  tr:not(.sum) td.surplus.negative{
    background-color: #9c2c34;
    border-color: #666;
    color: #FFF;
    font-weight: 800;
}
.overviewTable  tr:not(.sum) td.surplus.positive{
    background-color: #b1b1b1;
    border-color: #666;
    color: #444;
}

.overviewTable  tr.past{
    background-color: #0077b6;
    color: #FFFFFFEE;
}
.overviewTable tr.past td{
    border-color: #0b3954;
}
.overviewTable tr.present{
    background-color: #cbf3f0;
    outline: 2px solid #0b3954;
}
.overviewTable tr.present td{
    border-color: #0b3954;
    font-weight: 800;
}
.overviewTable tr.future{
    background-color: #DDD;
    color: #888;
}

.txn-drawer section header h2{
    font-weight: 800;
    font-size: 2rem;
}

.waterfall-chart .highcharts-point,
.waterfall-chart .highcharts-label
{
    cursor: pointer;
}

.budget-drawer-summary{
    display: flex;
    justify-content: space-around;
    align-items: center;
    padding: 1ex;
    font-weight: 800;
    outline: 1px solid #EEE;
    margin-top: 1ex;
    margin-bottom: 1ex;
    border-radius: 1ex;
    background-color: #EEE;
}

@-webkit-keyframes spin {
    from {
        -webkit-transform: rotate(0deg);
        transform: rotate(0deg);
    }
    to {
        -webkit-transform: rotate(360deg);
        transform: rotate(360deg);
    }
}

@keyframes spin {
    from {
        transform: rotate(0deg);
    }
    to {
        transform: rotate(360deg);
    }
}

button.reload img {
    width: 2.7rem;
    margin-top: 0.7ex;
}
button.reload{
    cursor: pointer;
    font-size: 2rem;
    margin-left: -2.5rem;
    width: 3.5rem;
}

.mortgage-table-body tr:nth-child(odd) td{
    background-color: #EEE;
}
.mortgage-table-body {
    border-collapse: collapse;
}

.mortgage-table-body tr.new-year td {
    border-top: 3px solid #666;
}
.mortgage-table-body tr td {
    padding:0 1ex;
    text-align: center;
}
.mortgage-table, .mortgage-summary{
    width: 100%;
    border-collapse: collapse;
    margin: 1ex 0;
}

.mortgage-table, .mortgage-summary{
 
}

.mortgage-summary td{
    white-space: nowrap;
}
.mortgage-summary td:last-child{
}
.mortgage-summary .summary-cell{
    border-left: 2px solid #666;
    border-right: 3rem;
    padding-right: 3rem;
}
.mortgage-summary .summary-key{
    font-weight: 800;
    text-align: right;
    padding-right: 1rem;
}

.first-row td:not(:first-child){
    border-top: 2px solid #666;
}
.last-row td:not(:first-child){
    border-bottom: 2px solid #666;
}

.transactions-table tr.paired {
  opacity: 0.5;
}
.transactions-table tr.paired:hover {
  opacity: 0.8;
}
.pair-badge {
  margin-left: 4px;
  font-size: 0.75rem;
  cursor: help;
}
.txn-menu-item:hover {
  background: #2a2a4e !important;
}

.mortgage-table-body tr.future-month td {
  background-color: #1a2a3a;
  color: #8ab4f8;
}
.mortgage-table-body tr.future-month:nth-child(odd) td {
  background-color: #1a2a3a;
}

